rns-lang/tests/snapshots/parser-class_directive-header-trailing_tokens-dot_method.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
   .class    HelloWorld    .method public <init>()V .end method
.super java/lang/Object

.end method
----- STDOUT -----

----- STDERR -----
Error: Unexpected directive after class name
   ╭─[ test_data/integration/parser/class_directive/header/trailing_tokens/dot_method.ja:1:28 ]
   │
 1 │    .class    HelloWorld    .method public <init>()V .end method
   │                            ──────────────────┬─────────────────  
   │                                              ╰─────────────────── The '.method' directive must start on a new line.
   │ 
   │ Note: The class definition should end after the class name.
   │       Consider starting a new line for the '.method' directive.
───╯
